--- a/front/scss/components/_car-item.scss
+++ b/front/scss/components/_car-item.scss
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    width: 395px;
+    width: 518px;
+    height: 457px;
     &__img {
-        width: 395px;
-        height: 220px;
+        width: 518px;
+        height: 312px;
         border-radius: 5px;
     }
     &__title {
