--- a/front/scss/components/_footer.scss
+++ b/front/scss/components/_footer.scss
@@ -5,7 +5,6 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 0 145px;
     }
     &__logos {
         display: flex;
