--- a/front/scss/components/_header.scss
+++ b/front/scss/components/_header.scss
@@ -22,7 +22,6 @@
 .logo {
     color: var(--txt_color_second, #fff);
     font-size: 32px;
-    margin-left: 162px;
     & span {
         color: var(--color_second, #e11e18);
     }
