--- a/front/scss/components/_search-field.scss
+++ b/front/scss/components/_search-field.scss
@@ -3,7 +3,6 @@
     height: 63px;
     display: flex;
     align-items: center;
-    margin-right: 160px;
     gap: 20px;
     padding: 19px 15px 20px 22px;
     border-radius: 112px;
